@@ -1,3 +1,9 @@
+2006-02-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_transform.c: Treat errno=33 (EDOM) and errno=34 (ERANGE)
+	as transient errors, and continue trying to transform the rest of
+	the points.
+
 2006-01-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* nad/world: Fixed definition of <irish> as per:
